# rsd_tts

./: README.md  pyproject.toml
rsd_tts/: pyproject.toml  requirements.txt
rsd_tts/rsd_tts/: __init__.py  core.py
