[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rsd_tts"
version = "0.1.0"
description = "Libreria Python per sintesi vocale in italiano con pulizia del testo (win 10/11)"
authors = [
    { name = "Reza Shahrezaei", email = "" },
]
readme = "README.md"
license = { text = "MIT" }
keywords = ["text-to-speech", "italiano", "TTS", "sintesi vocale"]
classifiers = [
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: Microsoft :: Windows :: Windows 11",
    "Environment :: Win32 (MS Windows)",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.7+",
    "Natural Language :: Italian",
]

dependencies = [
    "pywin32>=300",
]

[project.urls]
Homepage = "https://github.com/RezaSD-Dev/rsd_tts"
Documentation = "https://github.com/RezaSD-Dev/rsd_tts#readme"
